# betterstack

api/: .env  Cargo.toml
api/src/: main.rs  request_inputs.rs  request_outputs.rs
store/: Cargo.toml  diesel.toml
store/migrations/2025-09-07-174302_create_user_and_website/: up.sql
store/migrations/2025-09-09-181004_create_users_update_website/: up.sql
store/src/: config.rs  lib.rs  schema.rs  store.rs
store/src/models/: mod.rs  users.rs  website.rs
