[package]
name = "store"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
diesel = { version = "2.1.2", features = ["postgres", "chrono"] }
dotenvy = "0.15.7"
uuid = { version = "1.17.0", features = ["v4", "serde"] }

[lib]
name = "store"
path = "src/lib.rs"
